--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Daniel Te
-#logo: /assets/img/headshot_circle.png
-#description: text below image
-#show_downloads: true
+logo: /img/profile.jpg
+description: this is my profile picture
+show_downloads: true
 theme: jekyll-theme-hacker
