--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Daniel Te
-logo: /img/profile.jpg
+logo: assets/img/profile.jpg
 description: this is my profile picture
 show_downloads: true
 theme: jekyll-theme-hacker
